Allow incremental builds